--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 			<groupId>oracle</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<version>12.2.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
